# WarpFiducials

./: CMakeLists.txt  README.md  TODO.txt
src/: CMakeLists.txt  WarpFiducials.cxx  WarpFiducials.cxx~  WarpFiducials.xml  WarpFiducials.xml~  warpfids.cc
src/LogDomainDemons/: vnl_sd_matrix_tools.h  vnl_sd_matrix_tools.txx
test/: input.fcsv  rib1.nrrd  rib2.nrrd
